maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: value &&! is not a member of Boolean
  if (x<h-1 &&!aMurOuest(x+1,y)&& getIndication(x+1,y)==9999)
            ^